--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Akka HTTP - Alpakka - JDBC Example</title>
   <script>
       let log = message =>
           document.getElementById("messages").value +=
@@ -13,6 +14,7 @@
   </script>
 </head>
 <body>
+    <h2>Streamed Database Results</h2>
 <textarea name="messages" id="messages" cols="50" rows="30"></textarea>
 </body>
 </html>
